# latexproject

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: tauri-env.mjs  tauri-env.test.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/latex/: mod.rs
src/backend/: latexBackend.test.ts  latexBackend.ts
src/domain/: latexCompiler.test.ts  latexCompiler.ts  latexEngine.test.ts  latexEngine.ts
src/ui/: App.test.tsx  App.tsx
