[package]
name = "latex-workbench"
version = "0.1.0"
description = "A desktop LaTeX workbench"
authors = ["latex-workbench"]
edition = "2021"
rust-version = "1.77"
default-run = "latex-workbench"

[lib]
name = "latex_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "latex-workbench"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

